# syllabus-parser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: export.py  files.py  parse.py
backend/app/services/: calendar_utils.py  extraction.py  google_calendar.py  ics.py  llm.py  recurrence.py  storage.py  syllabi.py
backend/app/utils/: prompts.py
backend/tests/: conftest.py  test_calendar_utils.py  test_export_router.py  test_extraction.py  test_files_router.py  test_google_calendar.py  test_ics.py  test_llm.py  test_parse_router.py  test_recurrence.py
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: confirm-dialog.tsx  dashboard-page.test.tsx  dashboard-page.tsx  event-list.tsx  export-buttons.tsx  footer.tsx  header.test.tsx  header.tsx  home-page.tsx  landing-page.tsx  loading-screen.tsx  login-page.test.tsx  login-page.tsx  parsed-event-list.tsx  (+10 more)
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240101000000_create_users_profile.sql  20240101000001_create_syllabi.sql  20240101000002_create_events.sql  20240101000003_create_reminders.sql  20240101000004_create_storage_bucket.sql  20240101000005_optimize_rls_policies.sql  20240101000006_fix_remaining_advisors.sql  20240101000007_fix_prevent_email_update_search_path.sql  20260409000000_add_timezone_to_syllabi.sql
(+19 files in other folders)
